✨ Add provider-specific configSecret support
Providers can now define their own configSecret:
  core:
    cluster-api:
      configSecret:
        name: core-secret
        namespace: capi-system

If not specified, providers will use the global configSecret.

Signed-off-by: kahirokunn <okinakahiro@gmail.com>

--- a/hack/charts/cluster-api-operator-providers/values.yaml
+++ b/hack/charts/cluster-api-operator-providers/values.yaml
@@ -24,6 +24,9 @@ infrastructure: {}
 #   namespace: ""         # Optional
 #   version: ""           # Optional
 #   createNamespace: true # Optional
+#   configSecret:         # Optional
+#     name: some-secret   # Optional
+#     namespace: default  # Optional
 addon: {}
 # helm: {}                # Name, required
 #   namespace: ""         # Optional
