--- a/hack/charts/cluster-api-operator-providers/templates/control-plane.yaml
+++ b/hack/charts/cluster-api-operator-providers/templates/control-plane.yaml
@@ -28,7 +28,7 @@ metadata:
     "helm.sh/hook-weight": "2"
     {{- end }}
     "argocd.argoproj.io/sync-wave": "2"
-{{- if or $controlPlaneVersion $.Values.configSecret.name $.Values.manager }}
+{{- if or $controlPlaneVersion $controlPlane.configSecret $.Values.configSecret.name $.Values.manager }}
 spec:
 {{- end}}
 {{- if $controlPlaneVersion }}
@@ -47,11 +47,12 @@ spec:
 {{- end }}
 {{- end }}
 {{- end }}
-{{- if $.Values.configSecret.name }}
+{{- $configSecret := default $.Values.configSecret $controlPlane.configSecret }}
+{{- if $configSecret.name }}
   configSecret:
-    name: {{ $.Values.configSecret.name }}
-    {{- if $.Values.configSecret.namespace }}
-    namespace: {{ $.Values.configSecret.namespace }}
+    name: {{ $configSecret.name }}
+    {{- if $configSecret.namespace }}
+    namespace: {{ $configSecret.namespace }}
     {{- end }}
 {{- end }}
 {{- if $controlPlane.manifestPatches }}
