Address PR feedback

--- a/hack/charts/cluster-api-operator/templates/deployment.yaml
+++ b/hack/charts/cluster-api-operator/templates/deployment.yaml
@@ -74,6 +74,9 @@ spec:
         {{- if .Values.watchConfigSecret }}
         - --watch-configsecret
         {{- end }}
+        {{- if .Values.watchConfigMap }}
+        - --watch-configmap
+        {{- end }}
         {{- with .Values.leaderElection }}
         - --leader-elect={{ .enabled }}
         {{- if .leaseDuration }}
