--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -64,6 +64,7 @@ profilerAddress: ":6060"
 contentionProfiling: false
 insecureDiagnostics: false
 watchConfigSecret: false
+watchConfigMap: false
 imagePullSecrets: {}
 resources:
   manager:
