chore: implement diagnostics fields

--- a/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
@@ -1433,7 +1433,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -2962,7 +2974,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
