feat: make it possible to define fetchConfig per component
Signed-off-by: kahirokunn <okinakahiro@gmail.com>

--- a/hack/charts/cluster-api-operator-providers/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator-providers/templates/addon.yaml
@@ -43,6 +43,9 @@ spec:
 {{- if $addon.manifestPatches }}
   manifestPatches: {{ toYaml $addon.manifestPatches | nindent 4 }}
 {{- end }}
+{{- if $addon.fetchConfig }}
+  fetchConfig: {{ toYaml $addon.fetchConfig | nindent 4 }}
+{{- end }}
 {{- if $addon.additionalManifests }}
   additionalManifests:
     name: {{ $addon.additionalManifests.name }}
