--- a/hack/charts/cluster-api-operator/templates/ipam.yaml
+++ b/hack/charts/cluster-api-operator/templates/ipam.yaml
@@ -63,6 +63,9 @@ spec:
 {{- if $ipam.manifestPatches }}
   manifestPatches: {{ toYaml $ipam.manifestPatches | nindent 4 }}
 {{- end }}
+{{- if $ipam.fetchConfig }}
+  fetchConfig: {{ toYaml $ipam.fetchConfig | nindent 4 }}
+{{- end }}
 {{- if $.Values.additionalDeployments }}
   additionalDeployments: {{ toYaml $.Values.additionalDeployments | nindent 4 }}
 {{- end }}
