Implement fetchConfig for all provider types.
Since the mapping is on resource name, you cannot have multiple
providers sharing the same name with their own fetchConfig.

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -43,6 +43,12 @@ spec:
 {{- if $addon.manifestPatches }}
   manifestPatches: {{ toYaml $addon.manifestPatches | nindent 4 }}
 {{- end }}
+{{- if and (kindIs "map" $.Values.fetchConfig) (hasKey $.Values.fetchConfig $addonName) }}
+  fetchConfig:
+    {{- range $key, $value := index $.Values.fetchConfig $addonName }}
+      {{ $key }}: {{ $value }}
+    {{- end }}
+{{- end }}
 {{- if $addon.additionalManifests }}
   additionalManifests:
     name: {{ $addon.additionalManifests.name }}
