--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -45,9 +45,7 @@ spec:
 {{- end }}
 {{- if and (kindIs "map" $.Values.fetchConfig) (hasKey $.Values.fetchConfig $addonName) }}
   fetchConfig:
-    {{- range $key, $value := index $.Values.fetchConfig $addonName }}
-      {{ $key }}: {{ $value }}
-    {{- end }}
+    {{- index $.Values.fetchConfig $addonName | toYaml | nindent 4 }}
 {{- end }}
 {{- if $addon.additionalManifests }}
   additionalManifests:
