--- a/hack/charts/cluster-api-operator/templates/core.yaml
+++ b/hack/charts/cluster-api-operator/templates/core.yaml
@@ -55,9 +55,7 @@ spec:
 {{- end }}
 {{- if and (kindIs "map" $.Values.fetchConfig) (hasKey $.Values.fetchConfig $coreName) }}
   fetchConfig:
-    {{- range $key, $value := index $.Values.fetchConfig $coreName }}
-      {{ $key }}: {{ $value }}
-    {{- end }}
+    {{- index $.Values.fetchConfig $coreName | toYaml | nindent 4 }}
 {{- end }}
 {{- if $core.additionalManifests }}
   additionalManifests:
