--- a/hack/charts/cluster-api-operator/templates/infra.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra.yaml
@@ -49,9 +49,7 @@ spec:
 {{- end }}
 {{- if and (kindIs "map" $.Values.fetchConfig) (hasKey $.Values.fetchConfig $infrastructureName) }}
   fetchConfig:
-    {{- range $key, $value := index $.Values.fetchConfig $infrastructureName }}
-      {{ $key }}: {{ $value }}
-    {{- end }}
+    {{- index $.Values.fetchConfig $infrastructureName | toYaml | nindent 4 }}
 {{- end }}
 {{- if $.Values.configSecret.name }}
   configSecret:
