--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -101,8 +101,10 @@ linters:
         - pkg: sigs.k8s.io/cluster-api/cmd/clusterctl/client/config
           alias: configclient
         # CAPI Operator
-        - pkg: sigs.k8s.io/cluster-api-operator/api/v1alpha2
+        - pkg: sigs.k8s.io/cluster-api-operator/api/v1alpha3
           alias: operatorv1
+        - pkg: sigs.k8s.io/cluster-api-operator/api/v1alpha2
+          alias: operatorv1alpha2
         - pkg: sigs.k8s.io/cluster-api-operator/internal/controller
           alias: providercontroller
       no-unaliased: true
@@ -143,6 +145,13 @@ linters:
       - linters:
           - staticcheck
         text: 'QF1008: could remove embedded field'
+      # Exclude nestif and gocyclo for api/v1alpha2 directory
+      - linters:
+          - nestif
+        path: api/v1alpha2/(.+)\.go$
+      - linters:
+          - gocyclo
+        path: api/v1alpha2/(.+)\.go$
       - linters:
           - staticcheck
         text: 'ST1000: at least one file in a package should have a package comment'
