--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -1457,7 +1457,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -2986,7 +2998,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -4576,7 +4600,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -6105,7 +6141,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -7696,7 +7744,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -9225,7 +9285,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -10816,7 +10888,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -12345,7 +12429,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -13936,7 +14032,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -15465,7 +15573,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -17056,7 +17176,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -18585,7 +18717,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
@@ -20177,7 +20321,19 @@ spec:
                                 BindAddress is the TCP address that the controller should bind to
                                 for serving prometheus metrics.
                                 It can be set to "0" to disable the metrics serving.
+                                NOTE: This field is deprecated, please use DiagnosticsAddress field
                               type: string
+                            diagnosticsAddress:
+                              description: |-
+                                DiagnosticsAddress is the TCP address that the controller should bind to
+                                for serving prometheus metric.
+                                It can be set to "0" to disable the metrics serving.
+                              type: string
+                            insecureDiagnostics:
+                              description: |-
+                                InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                                If false, or not set, the diagnostics address will expose pprof endpoints too.
+                              type: boolean
                           type: object
                         profilerAddress:
                           description: |-
@@ -21706,7 +21862,19 @@ spec:
                           BindAddress is the TCP address that the controller should bind to
                           for serving prometheus metrics.
                           It can be set to "0" to disable the metrics serving.
+                          NOTE: This field is deprecated, please use DiagnosticsAddress field
                         type: string
+                      diagnosticsAddress:
+                        description: |-
+                          DiagnosticsAddress is the TCP address that the controller should bind to
+                          for serving prometheus metric.
+                          It can be set to "0" to disable the metrics serving.
+                        type: string
+                      insecureDiagnostics:
+                        description: |-
+                          InsecureDiagnostics indicates if insecure metrics serving should be enabled.
+                          If false, or not set, the diagnostics address will expose pprof endpoints too.
+                        type: boolean
                     type: object
                   profilerAddress:
                     description: |-
