feat(chart): add insecureDiagnostics and diagnosticsAddress

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -28,9 +28,21 @@ metadata:
     "helm.sh/hook-weight": "2"
     {{- end }}
     "argocd.argoproj.io/sync-wave": "2"
-{{- if or $addonVersion $.Values.secretName $.Values.configSecret.name (($addon).configSecret).name }}
+{{- if or $addonVersion $.Values.secretName $.Values.configSecret.name $addon.manager (($addon).configSecret).name }}
 spec:
 {{- end}}
+{{- if $addon.manager }}
+  manager:
+  {{- if $addon.manager.metrics }}
+    metrics:
+    {{- if $addon.manager.metrics.insecureDiagnostics }}
+      insecureDiagnostics: {{- $addon.manager.metrics.insecureDiagnostics }}
+    {{- end }}
+    {{- if $addon.manager.metrics.diagnosticsAddress }}
+      diagnosticsAddress: {{- $addon.manager.metrics.diagnosticsAddress }}
+    {{- end }}
+  {{- end }}
+{{- end }}
 {{- if $addonVersion }}
   version: {{ $addonVersion }}
 {{- end }}
