feat: bootstrap provider feature gates
Signed-off-by: Dario Tranchitella <dario@tranchitella.eu>

--- a/hack/charts/cluster-api-operator/templates/bootstrap.yaml
+++ b/hack/charts/cluster-api-operator/templates/bootstrap.yaml
@@ -33,6 +33,12 @@ spec:
 {{- end}}
 {{- if $bootstrap.manager }}
   manager:
+  {{- if $bootstrap.manager.featureGates }}
+    featureGates:
+    {{- range $key, $value := $bootstrap.manager.featureGates }}
+      {{ $key }}: {{ $value }}
+    {{- end }}
+  {{- end }}
   {{- if $bootstrap.manager.metrics }}
     metrics:
     {{- if $bootstrap.manager.metrics.insecureDiagnostics }}
